FreeST/test/Programs/ValidTests/intListBuildFun/intListBuildFun.fst

main : [Int]
main = [4,f 5]

f : Int -> Int
f x = x * 2