FreeST/test/Programs/InvalidTests/ParseErrors/dupCollect/dupCollect.fst
collect : Int -> Int
collect x = x

main : Int
main = collect 2